--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,7 +3,10 @@ FROM node:20-alpine
 WORKDIR /app
 
 # Instalăm dependențele pentru build și pentru pachete native
-RUN apk add --no-cache python3 make g++ git postgresql-client redis
+# cairo, pango, pixman pentru PDFKit font rendering
+RUN apk add --no-cache python3 make g++ git postgresql-client redis \
+    cairo cairo-dev pango pango-dev pixman pixman-dev \
+    jpeg-dev giflib-dev librsvg-dev
 
 # Instalăm nodemon pentru dezvoltare și instrumente utile CLI
 RUN npm install -g nodemon drizzle-kit tsx ts-node
