--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -2,8 +2,11 @@ FROM node:20-alpine as builder
 
 WORKDIR /app
 
-# Instalăm dependențele pentru build
-RUN apk add --no-cache python3 make g++ git postgresql-client redis
+# Instalăm dependențele pentru build + PDFKit requirements
+# cairo, pango pentru font rendering în PDF
+RUN apk add --no-cache python3 make g++ git postgresql-client redis \
+    cairo cairo-dev pango pango-dev pixman pixman-dev \
+    jpeg-dev giflib-dev librsvg-dev
 
 # Copiem fișierele package*.json
 COPY package*.json ./
@@ -23,7 +26,9 @@ FROM node:20-alpine
 WORKDIR /app
 
 # Instalăm utilitare pentru verificarea serviciilor și pachete esențiale
-RUN apk add --no-cache postgresql-client redis curl busybox-extras
+# Adăugăm și runtime dependencies pentru PDFKit
+RUN apk add --no-cache postgresql-client redis curl busybox-extras \
+    cairo pango pixman jpeg giflib librsvg
 
 # Instalăm doar dependențele de producție
 COPY package*.json ./
