--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/lodash": "^4.17.16",
     "@types/multer": "^1.4.12",
     "@types/node-cron": "^3.0.11",
+    "@types/pdfkit": "^0.17.3",
     "@types/uuid": "^10.0.0",
     "@types/xml2js": "^0.4.14",
     "axios": "^1.8.5",
@@ -86,6 +87,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.17.2",
     "postgres": "^3.4.5",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
