--- a/package.json
+++ b/package.json
@@ -71,10 +71,12 @@
     "drizzle-orm": "^0.44.5",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "form-data": "^4.0.2",
     "framer-motion": "^11.13.1",
+    "glob": "^11.0.3",
     "input-otp": "^1.2.4",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
