--- a/package.json
+++ b/package.json
@@ -13,128 +13,129 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@hookform/resolvers": "^3.10.0",
+    "@hookform/resolvers": "^5.2.2",
     "@jridgewell/trace-mapping": "^0.3.31",
-    "@mui/material": "^7.3.3",
+    "@mui/material": "^7.3.4",
     "@neondatabase/serverless": "^1.0.2",
     "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.6",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-collapsible": "^1.1.1",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-context-menu": "^2.2.16",
-    "@radix-ui/react-dialog": "^1.1.12",
-    "@radix-ui/react-dropdown-menu": "^2.1.12",
-    "@radix-ui/react-hover-card": "^1.1.12",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-menubar": "^1.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-scroll-area": "^1.2.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.90.2",
-    "@types/bcrypt": "^5.0.2",
-    "@types/lodash": "^4.17.16",
-    "@types/multer": "^1.4.12",
+    "@types/bcrypt": "^6.0.0",
+    "@types/lodash": "^4.17.20",
+    "@types/multer": "^2.0.0",
     "@types/node-cron": "^3.0.11",
     "@types/pdfkit": "^0.17.3",
-    "@types/uuid": "^10.0.0",
     "@types/xml2js": "^0.4.14",
-    "axios": "^1.8.5",
-    "bcrypt": "^5.1.1",
-    "bullmq": "^5.46.2",
-    "class-variance-authority": "^0.7.0",
+    "axios": "^1.12.2",
+    "bcrypt": "^6.0.0",
+    "bullmq": "^5.61.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "commander": "^13.1.0",
+    "cmdk": "^1.1.1",
+    "commander": "^14.0.1",
     "connect-pg-simple": "^10.0.0",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.44.5",
-    "drizzle-zod": "^0.7.0",
-    "embla-carousel-react": "^8.3.0",
+    "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.6",
+    "drizzle-zod": "^0.8.3",
+    "embla-carousel-react": "^8.6.0",
     "exceljs": "^4.4.0",
-    "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "form-data": "^4.0.2",
-    "framer-motion": "^11.13.1",
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "form-data": "^4.0.4",
+    "framer-motion": "^12.23.22",
     "glob": "^11.0.3",
-    "input-otp": "^1.2.4",
-    "ioredis": "^5.6.1",
+    "inflight": "^1.0.6",
+    "input-otp": "^1.4.2",
+    "ioredis": "^5.8.1",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.468.0",
+    "lucide-react": "^0.545.0",
     "memorystore": "^1.6.7",
-    "multer": "^1.4.5-lts.2",
-    "node-cron": "^3.0.3",
-    "nx": "^21.5.1",
-    "openai": "^4.95.0",
+    "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
+    "nx": "^21.6.3",
+    "openai": "^6.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pdfkit": "^0.17.2",
-    "postgres": "^3.4.5",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.1",
-    "react-icons": "^5.4.0",
-    "react-resizable-panels": "^2.1.4",
-    "recharts": "^2.13.0",
-    "stripe": "^19.0.0",
-    "tailwind-merge": "^2.5.4",
+    "postgres": "^3.4.7",
+    "react": "^19.2.0",
+    "react-day-picker": "^9.11.0",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.64.0",
+    "react-icons": "^5.5.0",
+    "react-resizable-panels": "^3.0.6",
+    "recharts": "^3.2.1",
+    "rimraf": "^6.0.1",
+    "stripe": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
-    "uuid": "^11.1.0",
-    "vaul": "^1.1.0",
-    "wouter": "^3.3.5",
-    "ws": "^8.18.0",
-    "xlsx": "^0.18.5",
+    "uuid": "^13.0.0",
+    "vaul": "^1.1.2",
+    "wouter": "^3.7.1",
+    "ws": "^8.18.3",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-latest/xlsx-latest.tgz",
     "xml2js": "^0.6.2",
-    "zod": "^3.23.8",
-    "zod-validation-error": "^3.4.0"
+    "zod": "^4.1.12",
+    "zod-validation-error": "^4.0.2"
   },
   "devDependencies": {
-    "@replit/vite-plugin-cartographer": "^0.0.11",
+    "@replit/vite-plugin-cartographer": "^0.3.1",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
-    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/connect-pg-simple": "^7.0.3",
-    "@types/express": "4.17.21",
-    "@types/express-session": "^1.18.0",
-    "@types/node": "20.16.11",
-    "@types/passport": "^1.0.16",
+    "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
+    "@types/node": "^24.7.0",
+    "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^4.3.2",
-    "autoprefixer": "^10.4.20",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
+    "@types/ws": "^8.18.1",
+    "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.21",
     "drizzle-kit": "^0.31.5",
-    "esbuild": "^0.25.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "tsx": "^4.19.1",
-    "typescript": "5.9.3",
-    "vite": "^6.3.6"
+    "esbuild": "^0.25.10",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "vite": "^7.1.9"
   },
   "optionalDependencies": {
-    "bufferutil": "^4.0.8"
+    "bufferutil": "^4.0.9"
   }
 }
