feat: Integrate comprehensive monitoring, security & quality tools
✨ Features:
- Prometheus metrics collection & monitoring
- Grafana dashboards with Loki integration
- Sentry error tracking (SaaS) for frontend & backend
- Falco runtime security monitoring (eBPF)
- Wazuh SIEM (manager, indexer, dashboard)
- ESLint configuration for code quality

🐛 Bug Fixes:
- Fixed path-to-regexp errors in Express routing
- Removed optional parameters from routes (/:param?)
- Fixed Vite catch-all route (/* → middleware without path)
- Resolved route conflicts (/api/admin/roles/:companyId vs /:id)
- Fixed lodash dependency (replaced with inline debounce)

🔧 Configuration:
- Docker Compose services for all monitoring tools
- Prometheus scraping configs
- Grafana datasources provisioning
- Loki log aggregation with Promtail
- Falco custom security rules
- Sentry API v10 integration

📚 Documentation:
- MONITORING-SECURITY-GUIDE.md - Complete setup guide
- QUICK-START-TESTING.md - Testing instructions
- MONITORING-COMMANDS.md - Useful commands
- IMPLEMENTATION-COMPLETE.md - Summary

✅ All services verified working:
- Application (health endpoint ✓)
- PostgreSQL ✓
- Prometheus ✓
- Grafana ✓
- Loki ✓
- Promtail ✓
- Falco ✓
- Wazuh (full stack) ✓
- 0 linter errors ✓

--- a/.env.template
+++ b/.env.template
@@ -59,3 +59,20 @@ CHOKIDAR_INTERVAL=100
 
 # Migrations
 RUN_MIGRATIONS=false
+
+# ===== Monitoring & Security =====
+
+# Sentry Error Tracking
+# Obține DSN de la https://sentry.io după ce creezi un cont și un proiect
+SENTRY_DSN=https://your-key@o123456.ingest.sentry.io/123456
+VITE_SENTRY_DSN=https://your-key@o123456.ingest.sentry.io/123456
+SENTRY_SKIP_DEV=false
+
+# Grafana Configuration
+GRAFANA_ADMIN_PASSWORD=admin123
+GRAFANA_URL=http://localhost:4000
+GRAFANA_DOMAIN=localhost
+
+# Wazuh Configuration
+WAZUH_INDEXER_PASSWORD=SecretPassword
+WAZUH_API_PASSWORD=MyS3cr37P450r.*-
