--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,6 +5,9 @@ services:
       dockerfile: Dockerfile.prod
     container_name: geniuserp-app
     restart: unless-stopped
+    labels:
+      - logging=promtail
+      - logging_jobname=geniuserp-app
     environment:
       # Variabile de bază
       - NODE_ENV=production
@@ -37,6 +40,10 @@ services:
       # Setări pentru logging
       - LOG_LEVEL=${LOG_LEVEL:-info}
       - ENABLE_SQL_LOGGING=${ENABLE_SQL_LOGGING:-false}
+      
+      # Sentry Error Tracking
+      - SENTRY_DSN=${SENTRY_DSN}
+      - VITE_SENTRY_DSN=${VITE_SENTRY_DSN}
     volumes:
       - app_logs:/app/logs
       - db_backups:/app/db-backups
@@ -156,6 +163,163 @@ services:
     networks:
       - geniuserp-network
 
+  # ===== MONITORING STACK (PRODUCTION) =====
+  
+  # Prometheus - Colectare metrici
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: geniuserp-prometheus
+    volumes:
+      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--storage.tsdb.retention.time=30d'
+    networks:
+      - geniuserp-network
+    restart: unless-stopped
+
+  # Grafana - Dashboards și Alerte
+  grafana:
+    image: grafana/grafana:latest
+    container_name: geniuserp-grafana
+    volumes:
+      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
+      - grafana_data:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-admin123}
+      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_SERVER_ROOT_URL=${GRAFANA_URL:-http://localhost:4000}
+      - GF_SERVER_DOMAIN=${GRAFANA_DOMAIN:-localhost}
+    networks:
+      - geniuserp-network
+    depends_on:
+      - prometheus
+    restart: unless-stopped
+
+  # Loki - Log aggregation
+  loki:
+    image: grafana/loki:latest
+    container_name: geniuserp-loki
+    volumes:
+      - ./monitoring/loki/loki-config.yml:/etc/loki/local-config.yaml
+      - loki_data:/tmp/loki
+    command: -config.file=/etc/loki/local-config.yaml
+    networks:
+      - geniuserp-network
+    restart: unless-stopped
+
+  # Promtail - Log collector
+  promtail:
+    image: grafana/promtail:latest
+    container_name: geniuserp-promtail
+    volumes:
+      - ./monitoring/promtail/promtail-config.yml:/etc/promtail/config.yml
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+    command: -config.file=/etc/promtail/config.yml
+    networks:
+      - geniuserp-network
+    depends_on:
+      - loki
+    restart: unless-stopped
+
+  # ===== SECURITY STACK (PRODUCTION) =====
+
+  # Falco - Runtime Security Monitoring
+  falco:
+    image: falcosecurity/falco-no-driver:latest
+    container_name: geniuserp-falco
+    privileged: true
+    pid: host
+    volumes:
+      - /var/run/docker.sock:/host/var/run/docker.sock:ro
+      - /proc:/host/proc:ro
+      - /etc:/host/etc:ro
+      - ./monitoring/falco:/etc/falco
+    environment:
+      - FALCO_BPF_PROBE=""
+    labels:
+      - logging=promtail
+      - logging_jobname=falco
+    networks:
+      - geniuserp-network
+    restart: unless-stopped
+
+  # Wazuh Indexer (OpenSearch)
+  wazuh-indexer:
+    image: wazuh/wazuh-indexer:4.7.0
+    container_name: geniuserp-wazuh-indexer
+    hostname: wazuh-indexer
+    environment:
+      - "OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g"
+      - "bootstrap.memory_lock=true"
+      - "discovery.type=single-node"
+      - "network.host=0.0.0.0"
+      - "plugins.security.ssl.http.enabled=false"
+      - "plugins.security.disabled=true"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    volumes:
+      - wazuh_indexer_data:/var/lib/wazuh-indexer
+    networks:
+      - geniuserp-network
+    restart: unless-stopped
+
+  # Wazuh Manager
+  wazuh-manager:
+    image: wazuh/wazuh-manager:4.7.0
+    container_name: geniuserp-wazuh-manager
+    hostname: wazuh-manager
+    environment:
+      - INDEXER_URL=http://wazuh-indexer:9200
+      - INDEXER_USERNAME=admin
+      - INDEXER_PASSWORD=${WAZUH_INDEXER_PASSWORD:-SecretPassword}
+      - FILEBEAT_SSL_VERIFICATION_MODE=none
+      - SSL_CERTIFICATE_AUTHORITIES=""
+      - SSL_CERTIFICATE=""
+      - SSL_KEY=""
+      - API_USERNAME=wazuh-wui
+      - API_PASSWORD=${WAZUH_API_PASSWORD:-MyS3cr37P450r.*-}
+    volumes:
+      - wazuh_manager_data:/var/ossec/data
+      - wazuh_manager_etc:/var/ossec/etc
+      - wazuh_manager_logs:/var/ossec/logs
+    labels:
+      - logging=promtail
+      - logging_jobname=wazuh-manager
+    networks:
+      - geniuserp-network
+    depends_on:
+      - wazuh-indexer
+    restart: unless-stopped
+
+  # Wazuh Dashboard
+  wazuh-dashboard:
+    image: wazuh/wazuh-dashboard:4.7.0
+    container_name: geniuserp-wazuh-dashboard
+    hostname: wazuh-dashboard
+    environment:
+      - INDEXER_USERNAME=admin
+      - INDEXER_PASSWORD=${WAZUH_INDEXER_PASSWORD:-SecretPassword}
+      - WAZUH_API_URL=https://wazuh-manager
+      - DASHBOARD_USERNAME=kibanaserver
+      - DASHBOARD_PASSWORD=kibanaserver
+      - API_USERNAME=wazuh-wui
+      - API_PASSWORD=${WAZUH_API_PASSWORD:-MyS3cr37P450r.*-}
+      - OPENSEARCH_HOSTS=http://wazuh-indexer:9200
+    networks:
+      - geniuserp-network
+    depends_on:
+      - wazuh-manager
+    restart: unless-stopped
+
 networks:
   geniuserp-network:
     driver: bridge
@@ -164,3 +328,10 @@ volumes:
   postgres_data:
   app_logs:
   db_backups:
+  prometheus_data:
+  grafana_data:
+  loki_data:
+  wazuh_indexer_data:
+  wazuh_manager_data:
+  wazuh_manager_etc:
+  wazuh_manager_logs:
