--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "scan:vulnerabilities": "./scripts/scan-vulnerabilities.sh",
+    "scan:image": "docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy:latest image --severity HIGH,CRITICAL geniuserp-app",
+    "scan:fs": "docker run --rm -v $(pwd):/app aquasec/trivy:latest fs --severity HIGH,CRITICAL /app",
+    "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "lint:report": "eslint . --ext .ts,.tsx --format json --output-file eslint-report.json"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -19,7 +25,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
-    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/jwt": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.6",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -50,6 +56,9 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
+    "@sentry/node": "^10.19.0",
+    "@sentry/react": "^10.19.0",
+    "@sentry/tracing": "^7.120.4",
     "@tanstack/react-query": "^5.90.2",
     "@types/bcrypt": "^6.0.0",
     "@types/lodash": "^4.17.20",
@@ -74,7 +83,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "form-data": "^4.0.4",
-    "framer-motion": "^12.23.22",
+    "framer-motion": "^12.23.24",
     "glob": "^11.0.3",
     "inflight": "^1.0.6",
     "input-otp": "^1.4.2",
@@ -84,17 +93,18 @@
     "memorystore": "^1.6.7",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
-    "nx": "^21.6.3",
-    "openai": "^6.2.0",
+    "nx": "^21.6.4",
+    "openai": "^6.3.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pdfkit": "^0.17.2",
     "postgres": "^3.4.7",
+    "prom-client": "^15.1.3",
     "react": "^19.2.0",
-    "react-day-picker": "^9.11.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.0",
-    "react-hook-form": "^7.64.0",
+    "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.2.1",
@@ -113,22 +123,27 @@
     "zod-validation-error": "^4.0.2"
   },
   "devDependencies": {
-    "@replit/vite-plugin-cartographer": "^0.3.1",
+    "@replit/vite-plugin-cartographer": "^0.3.2",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.19",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
-    "@types/node": "^24.7.0",
+    "@types/node": "^24.7.2",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@types/ws": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "drizzle-kit": "^0.31.5",
     "esbuild": "^0.25.10",
+    "eslint": "^9.37.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
     "tsx": "^4.20.6",
