fix: Wazuh manager infinite restart loop due to empty SSL certificates
Problem:
- Wazuh manager container was restarting continuously
- Filebeat was failing with SSL certificate errors: 'open "": no such file or directory'
- SSL_CERTIFICATE_AUTHORITIES, SSL_CERTIFICATE, and SSL_KEY were set as empty strings

Solution:
- Commented out SSL certificate environment variables for development
- Wazuh already has FILEBEAT_SSL_VERIFICATION_MODE=none for dev
- Container now runs stable without restarts

Note: For production, uncomment and set proper SSL certificate paths

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -234,9 +234,10 @@ services:
       - INDEXER_USERNAME=admin
       - INDEXER_PASSWORD=SecretPassword
       - FILEBEAT_SSL_VERIFICATION_MODE=none
-      - SSL_CERTIFICATE_AUTHORITIES=""
-      - SSL_CERTIFICATE=""
-      - SSL_KEY=""
+      # SSL Certificates disabled for development (uncomment and set paths for production)
+      # - SSL_CERTIFICATE_AUTHORITIES=/path/to/ca.crt
+      # - SSL_CERTIFICATE=/path/to/client.crt
+      # - SSL_KEY=/path/to/client.key
       - API_USERNAME=wazuh-wui
       - API_PASSWORD=MyS3cr37P450r.*-
     volumes:
