--- a/package.json
+++ b/package.json
@@ -113,6 +113,8 @@
     "ts-node": "^10.9.2",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
+    "winston": "^3.18.3",
+    "winston-loki": "^6.1.3",
     "wouter": "^3.7.1",
     "ws": "^8.18.3",
     "xlsx": "https://cdn.sheetjs.com/xlsx-latest/xlsx-latest.tgz",
