--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -144,7 +144,9 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin123
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_SERVER_ROOT_URL=http://localhost:4000
-      - GF_INSTALL_PLUGINS=grafana-piechart-panel
+      - GF_INSTALL_PLUGINS=grafana-piechart-panel,grafana-sentry-datasource
+      # Sentry Integration
+      - SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN}
     labels:
       - logging=promtail
       - logging_jobname=grafana
