docs: Update Sentry provisioning with correct slug and URL

--- a/monitoring/grafana/provisioning/datasources/sentry.yml
+++ b/monitoring/grafana/provisioning/datasources/sentry.yml
@@ -6,11 +6,10 @@ datasources:
     uid: sentry
     orgId: 1
     access: proxy
-    url: https://sentry.io
+    url: https://de.sentry.io
     isDefault: false
     editable: true
     jsonData:
-      orgSlug: "o4510176750665728"
+      orgSlug: "viprom-energy-srl"
     secureJsonData:
       authToken: "${SENTRY_AUTH_TOKEN}"
-
