feat: Add automated TypeScript & ESLint monitoring system with Grafana dashboards
✨ New Features:
- Python scripts for automated TypeScript & ESLint error collection
- Cron jobs running every 15 minutes for continuous monitoring
- 2 specialized Grafana dashboards for code quality visualization
- JSON structured logs sent to Loki for advanced querying

📝 Scripts Added:
- scripts/typescript-errors-collector.py: Collects TS errors from backend/frontend
- scripts/eslint-errors-collector.py: Collects ESLint errors + warnings
- scripts/code-quality-crontab: Cron configuration for automated execution

📊 Grafana Dashboards:
- 12-geniuserp-typescript-errors.json: TypeScript errors monitoring
  • Backend/Frontend error counts
  • Error trends over time
  • Top error codes and files
  • Detailed error tables

- 13-geniuserp-eslint-errors.json: ESLint errors & warnings monitoring
  • Separate tracking for errors and warnings
  • Backend/Frontend distribution
  • Top 15 most common rules violated
  • Detailed issue tables with severity, file, line, column

🐳 Docker Updates:
- Added cron, python3, py3-pip to Dockerfile.dev & Dockerfile.prod
- Updated docker-entrypoint.sh to install crontab and start cron daemon
- Scripts copied to /app/scripts in production image

🎯 Benefits:
- Proactive code quality monitoring
- Historical trend analysis
- Quick identification of problematic files/rules
- Automated alerts in Grafana
- No manual intervention required

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,10 +3,10 @@ FROM node:24.9.0-alpine
 WORKDIR /app
 
 # Instalăm dependențele pentru build și pentru pachete native
-# cairo, pango, pixman pentru PDFKit font rendering
-RUN apk add --no-cache python3 make g++ git postgresql-client redis \
+# cairo, pango, pixman pentru PDFKit font rendering + cron pentru monitorizare
+RUN apk add --no-cache python3 py3-pip make g++ git postgresql-client redis \
     cairo cairo-dev pango pango-dev pixman pixman-dev \
-    jpeg-dev giflib-dev librsvg-dev
+    jpeg-dev giflib-dev librsvg-dev dcron busybox-extras
 
 # Instalăm nodemon pentru dezvoltare și instrumente utile CLI
 RUN npm install -g nodemon drizzle-kit tsx ts-node
