feat(testing): Add comprehensive testing infrastructure with 0 errors
🎯 Complete testing framework implementation:

✨ Features:
- Multi-framework support (Jest, Vitest, Mocha, Cypress, Playwright)
- Performance testing (Artillery, k6, JMeter)
- Full test orchestrator with parallel execution
- Real-time monitoring (Grafana, Loki, Sentry, Prometheus)
- Interactive control panel with REST API
- Comprehensive admin module tests (unit, integration, e2e, performance, security)

📦 Dependencies added:
- vitest, @playwright/test, cypress, jest, ts-jest
- supertest, @testing-library/react, @vitest/coverage-v8
- All type definitions (@types/cypress, @types/jest, @jest/types)

🧹 Code quality:
- 0 TypeScript errors
- 0 ESLint errors
- 62 ESLint warnings (console.log in orchestrator - acceptable for testing)
- Proper type definitions and mock interfaces
- All imports and exports verified

🏗️ Infrastructure:
- Shared utilities (logger, metrics, sentry-reporter, test-helpers)
- Configuration files for all frameworks
- Control API for test management (start/stop/restart tests)
- Grafana dashboard with test metrics
- Module-based test organization

🔒 Tests implemented for Admin module:
- Unit tests (api-key, role, user, config services)
- Integration tests (full API flows)
- E2E tests (complete user journeys with Playwright)
- Performance tests (k6 load testing)
- Security tests (auth bypass prevention)

📝 Documentation:
- Comprehensive README for testing infrastructure
- Per-module README with test coverage details
- API documentation for control endpoints

--- a/package.json
+++ b/package.json
@@ -133,35 +133,54 @@
     "zod-validation-error": "^4.0.2"
   },
   "devDependencies": {
+    "@jest/types": "^30.2.0",
+    "@playwright/test": "^1.56.0",
     "@replit/vite-plugin-cartographer": "^0.3.2",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/postcss": "^4.1.14",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/connect-pg-simple": "^7.0.3",
+    "@types/cypress": "^0.1.6",
     "@types/dompurify": "^3.0.5",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
+    "@types/jest": "^30.0.0",
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^24.7.2",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
+    "@types/supertest": "^6.0.3",
     "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.46.0",
     "@typescript-eslint/parser": "^8.46.0",
     "@vitejs/plugin-react": "^5.0.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
+    "cypress": "^15.4.0",
     "drizzle-kit": "^0.31.5",
     "esbuild": "^0.25.10",
     "eslint": "^9.37.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.0",
+    "happy-dom": "^20.0.0",
+    "jest": "^30.2.0",
+    "jest-junit": "^16.0.0",
+    "jsdom": "^27.0.0",
     "postcss": "^8.5.6",
+    "supertest": "^7.1.4",
     "tailwindcss": "^4.1.14",
     "tailwindcss-animate": "^1.0.7",
+    "ts-jest": "^29.4.5",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "vite": "^7.1.9"
+    "vite": "^7.1.9",
+    "vitest": "^3.2.4"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.9"
