--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "allowImportingTsExtensions": true,
     "moduleResolution": "bundler",
     "baseUrl": ".",
-    "types": ["node", "express"],
+    "types": ["node", "express", "jest"],
     "paths": {
       "@/*": ["./client/src/*"],
       "@shared/*": ["./shared/*"]
