--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,13 @@
 {
   "include": ["client/src/**/*", "shared/**/*", "server/**/*", "utils/testing/**/*"],
-  "exclude": ["node_modules", "build", "dist"],
+  "exclude": [
+    "node_modules",
+    "build",
+    "dist",
+    "node_modules/@types/cypress",
+    "node_modules/@types/chai",
+    "node_modules/cypress"
+  ],
   "compilerOptions": {
     "incremental": true,
     "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo",
@@ -16,6 +23,7 @@
     "moduleResolution": "bundler",
     "baseUrl": ".",
     "types": ["node", "express", "jest"],
+    "typeRoots": ["./node_modules/@types/node", "./node_modules/@types/express", "./node_modules/@types/jest", "./node_modules/@jest"],
     "paths": {
       "@/*": ["./client/src/*"],
       "@shared/*": ["./shared/*"]
