--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "include": ["client/src/**/*", "shared/**/*", "server/**/*", "utils/testing/**/*"],
   "exclude": [
-    "node_modules",
     "build",
     "dist",
+    "**/node_modules",
+    "!node_modules/@types",
     "node_modules/@types/cypress",
     "node_modules/@types/chai",
-    "node_modules/cypress"
+    "node_modules/cypress/**/*"
   ],
   "compilerOptions": {
     "incremental": true,
@@ -22,7 +23,7 @@
     "allowImportingTsExtensions": true,
     "moduleResolution": "bundler",
     "baseUrl": ".",
-    "types": ["node", "express", "jest"],
+    "skipLibCheck": true,
     "paths": {
       "@/*": ["./client/src/*"],
       "@shared/*": ["./shared/*"]
