fix(tsconfig): Exclude utils/testing from main tsconfig
🎯 FIX CRUCIAL: utils/testing TREBUIE exclus din tsconfig principal!

✅ Modificare:
- Removed "utils/testing/**/*" din include
- Added "utils/testing" în exclude

📋 Acum TypeScript va folosi:
- tsconfig.json PRINCIPAL pentru server/client/shared
- utils/testing/tsconfig.json SEPARAT pentru teste (cu Jest types)

⚠️ RESTART COMPLET IDE (Cmd+Q + reopen) ACUM!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
-  "include": ["client/src/**/*", "shared/**/*", "server/**/*", "utils/testing/**/*"],
+  "include": ["client/src/**/*", "shared/**/*", "server/**/*"],
   "exclude": [
+    "utils/testing",
     "build",
     "dist",
     "**/node_modules",
