fix(typescript): Restore types array in main tsconfig.json
🔧 Problem: Previous commits removed 'types' array causing widespread TS errors

✅ Fixed:
- Added back "types": ["node"] to main tsconfig.json
- Simplified exclude patterns (removed complex node_modules patterns)
- Kept utils/testing exclusion for separate test config

📋 Configuration now:
- tsconfig.json: Main app code (server/client/shared) with node types
- utils/testing/tsconfig.json: Test files with jest types

This should restore normal TypeScript operation for the entire codebase.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,7 @@
     "utils/testing",
     "build",
     "dist",
-    "**/node_modules",
-    "!node_modules/@types",
-    "node_modules/@types/cypress",
-    "node_modules/@types/chai",
-    "node_modules/cypress/**/*"
+    "node_modules"
   ],
   "compilerOptions": {
     "incremental": true,
@@ -24,6 +20,7 @@
     "allowImportingTsExtensions": true,
     "moduleResolution": "bundler",
     "baseUrl": ".",
+    "types": ["node"],
     "paths": {
       "@/*": ["./client/src/*"],
       "@shared/*": ["./shared/*"]
