--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "qrcode": "^1.5.4",
     "rate-limit-redis": "^4.2.2",
     "react": "^19.2.0",
+    "react-colorful": "^5.6.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
