--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/archiver": "^6.0.3",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/cypress": "^0.1.6",
     "@types/dompurify": "^3.0.5",
