fix(config): Enable forceConsistentCasingInFileNames in TypeScript configs
**Problem Analysis:**
- Microsoft Edge Tools warning about missing forceConsistentCasingInFileNames
- This is a REAL configuration issue, not a glitch
- Critical for cross-platform compatibility (macOS/Windows vs Linux)

**Why This Matters:**
Without this flag, imports can work on case-insensitive systems (macOS/Windows)
but fail on case-sensitive systems (Linux production servers).

Example potential bug:
- Developer writes: import { users } from '@shared/Schema'
- Works on macOS (case-insensitive)
- Crashes on Linux: Cannot find module '@shared/Schema' (file is schema.ts)

**Changes Made:**
- Added "forceConsistentCasingInFileNames": true to tsconfig.json
- Added "forceConsistentCasingInFileNames": true to tsconfig.base.json
- Positioned after "strict" for logical grouping with type safety options

**Verification:**
✅ Ran tsc --noEmit: No casing errors found (imports are already consistent)
✅ ESLint: 0 errors maintained
✅ TypeScript compilation: Success
✅ Edge Tools warning: Resolved

**Impact:**
- Prevents future cross-platform deployment bugs
- Enforces correct import casing at development time
- Aligns with TypeScript best practices
- No changes needed to existing code (already compliant)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "module": "ESNext",
     "target": "es2018",
     "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "lib": ["esnext", "dom", "dom.iterable"],
     "jsx": "preserve",
     "esModuleInterop": true,
